wip update and few more fixes

--- a/styles.css
+++ b/styles.css
@@ -36,6 +36,8 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    scrollbar-width: none;
+    -ms-overflow-style: none;
 }
 
 body {
