--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+/* to normalize cross browser look */
+html{line-height:1.15;-webkit-text-size-adjust:100%}body{margin:0}h1{font-size:2em;margin:.67em 0}hr{box-sizing:content-box;height:0;overflow:visible}pre{font-family:monospace,monospace;font-size:1em}a{background-color:transparent}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:bolder}code,kbd,samp{font-family:monospace,monospace;font-size:1em}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-.25em}sup{top:-.5em}img{border-style:none}button,input,optgroup,select,textarea{font-family:inherit;font-size:100%;line-height:1.15;margin:0}button,input{overflow:visible}button,select{text-transform:none}button,[type="button"],[type="reset"],[type="submit"]{-webkit-appearance:button}button::-moz-focus-inner,[type="button"]::-moz-focus-inner,[type="reset"]::-moz-focus-inner,[type="submit"]::-moz-focus-inner{border-style:none;padding:0}button:-moz-focusring,[type="button"]:-moz-focusring,[type="reset"]:-moz-focusring,[type="submit"]:-moz-focusring{outline:1px dotted ButtonText}fieldset{padding:.35em .75em .625em}legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal}progress{vertical-align:baseline}textarea{overflow:auto}[type="checkbox"],[type="radio"]{box-sizing:border-box;padding:0}[type="number"]::-webkit-inner-spin-button,[type="number"]::-webkit-outer-spin-button{height:auto}[type="search"]{-webkit-appearance:textfield;outline-offset:-2px}[type="search"]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}details{display:block}summary{display:list-item}template{display:none}[hidden]{display:none}
+
+
 @font-face {
     font-family: "fungal";
     src: url("./assets/fonts/FungalVF.woff2") format("woff2");
@@ -37,10 +41,10 @@
     --color-feedback-bg: #BFF205cc;
 
     /* font sizes */
-    --font-header: 48px;
+    --font-header: 36px;
     --font-filter-title: 24px;
     --font-article-title: 112px;
-    --font-article: 0.94rem;
+    --font-article: 18px;
     --font-toggle: 0.88rem;
     --font-shortcuts: 0.75rem;
     --font-kbd: 0.69rem;
@@ -94,7 +98,9 @@ body {
 }
 
 .container {
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    grid-gap: 1rem;
     min-height: 100vh;
     padding: 1.25rem;
 }
@@ -102,7 +108,7 @@ body {
 header {
     outline: var(--color-border) 3px solid;
     border-radius: var(--border-radius-xl);
-    width: 312px;
+    grid-column: 1 / span 2; /* header takes first 2 columns */
     padding: 1rem;
     position: sticky;
     top: 1rem;
@@ -179,7 +185,7 @@ header h1:hover {
 .filter-section ul li {
     margin-bottom: 0.3125rem;
     font-family: "universe", arial;
-    font-size: 24px;
+    font-size: var(--font-filter-title);
 }
 
 .filter-section ul li a {
@@ -199,39 +205,62 @@ header h1:hover {
 }
 
 .articles-container {
-    flex: 1;
+    grid-column: 3 / span 10; 
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(18.75rem, 1fr));
+    grid-template-columns: repeat(10, 1fr);
     grid-gap: 2.5rem;
-    padding: 0 1.25rem;
-    padding-top: 3.75rem;
+    padding-top: 1rem;
 }
 
 .article {
+    vertical-align: baseline;
     margin-bottom: 2.5rem;
+    grid-column: 1 / span 10;
+    display: grid;
+    grid-template-columns: 3fr 7fr; /* simplified two-column layout */
+    grid-gap: 2rem;
+}
+
+/* left column containing author and description */
+.article-left-column {
+    display: flex;
+    flex-direction: column;
+    font-size: var(--font-filter-title);
+    font-family: "apfel";
+}
+
+/* right column containing title and article text */
+.article-right-column {
+    display: flex;
+    flex-direction: column;
 }
 
 .article .author {
-    font-style: italic;
-    margin-bottom: 0.3125rem;
-}
-
-.article .title {
-    font-weight: bold;
-    margin-bottom: 0.3125rem;
-    font-size: var(--font-article-title);
+    font-family: "fungal", arial;
+    font-variation-settings: "THCK" 500, "grow" 300;
+    font-size: 24px;
 }
 
 .article .description {
     margin-top: 0.625rem;
+    line-height: 124%;
+}
+
+.article .title {
+    font-family: "universel", arial;
+    line-height: 92%;
+    margin-bottom: 0.3125rem;
+    letter-spacing: -8px;
+    font-size: var(--font-article-title);
 }
 
 .article .article-text {
+    padding-right: calc(100vw / 13);
     margin-top: 1.25rem;
+    font-family: "apfel";
     font-size: var(--font-article);
-    line-height: 1.6;
+    line-height: 136%;
     white-space: pre-wrap;
-    max-height: 25rem;
     overflow-y: hidden;
     pointer-events: auto;
     background: none;
@@ -240,11 +269,6 @@ header h1:hover {
     z-index: 10;
     position: relative;
     transition: var(--transition-shadow);
-}
-
-.article .article-text:hover {
-    overflow-y: auto;
-    box-shadow: 0 0.125rem 0.5rem var(--color-shadow-light);
 }
 
 /* hide scrollbar by default, show on hover */
